# Experimental_Robotics

./: CMakeLists.txt  README.md  launch_exp.sh  package.xml
config/: config.yaml  nav2.yaml  rviz.rviz  slam_toolbox.yaml  test.rviz
include/: Mover.hpp  arucoDetector.hpp  camMover.hpp  robotMover.hpp
launch/: assignment1.launch.py  assignment2.launch.py  cane.launch.py  old.launch.py
pddl/: domain.pddl  robot_navigation.pddl
robot_urdf/launch/: gazebo_aruco.launch.py  gazebo_aruco_controller.launch.py
robot_urdf/urdf/: robot4.gazebo  robot4.xacro
ros2_aruco/ros2_aruco/: setup.py
ros2_aruco/ros2_aruco/ros2_aruco/: camera_marker_detector.py  marker_detector.py
src/: arucoDetector.cpp  assignment1.cpp  camMover.cpp  explore_waypoint_action_node.cpp  mission_controller_node.cpp  move_action_node.cpp  move_to_min.cpp  robotMover.cpp  task_manager.cpp
urdf/: frames.gv  robot.gazebo  robot.urdf  robot.xacro  robot2.urdf  robot4.gazebo  robot4.xacro  rosbot.gazebo  rosbot.xacro  tmp.urdf
worlds/: assignment2.world
